--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="styles.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,700&display=swap" rel="stylesheet"> 
+	<title>Personal Website - Kaan Uzunpınar</title>
+</head>
+<body>
+	<header>Kaan Uzunpınar</header>
+	<main>
+		<div class="top">
+			<p class="small">Kaan Uzunpınar</p>
+			<p class="light">Software Engineer</p>
+			<p class="big">Hey there! I’m a software engineer who is currently 4th grade student at TOBB ETU, Department of Computer Engineering. </p>
+		</div>
+		
+	</main>
+</body>
+</html>
