--- a/index.html
+++ b/index.html
@@ -5,20 +5,23 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="google-site-verification" content="tmlg5zdudp7QVmUN8BEg3pZ7EpBObo5CXruzkugfdG4" />
+	<meta name="description" content="Personal website of Kaan Uzunpınar who is a software engineer."/>
 	<link rel="stylesheet" href="styles.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,700&display=swap" rel="stylesheet"> 
 	<title>Personal Website - Kaan Uzunpınar</title>
 </head>
 <body>
-	<header>Kaan Uzunpınar</header>
+	<header>
+		<h1>Kaan Uzunpınar</h1>
+	</header>
 	<main>
-		<div class="part">
+		<section class="part">
 			<p class="small">Kaan Uzunpınar</p>
 			<p class="light">Software Engineer</p>
 			<p class="big">Hey there! I’m a software engineer who is currently 4th grade student at TOBB ETU, Department of Computer Engineering. </p>
-		</div>
-		<div class="grid-container">
+		</section>
+		<section class="grid-container">
 			<div>
 				<p >About Me</p>
 			</div>
@@ -34,9 +37,9 @@
 				</p>
 
 			</div>
-		</div>
+		</section>
 
-		<div class="grid-container2">
+		<section class="grid-container2">
 			<div>
 				<p >My Experience</p>
 			</div>
@@ -64,10 +67,10 @@
 				
 
 			</div>
-		</div>
-		<div class="last " >
+		</section>
+		<section class="last " >
 				<p class="contacts" >Want To Get In Touch?</p>
-				<p class="contacts-element"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+				<p class="contacts-element"><svg  xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
 					<path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
 				  </svg> Email: <a href="mailto:uzunpinarkaan@gmail.com">uzunpinarkaan@gmail.com</a> </p>
 				  <p class="contacts-element"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
@@ -81,7 +84,7 @@
 				  </svg> Twitter: <a href="https://twitter.com/kaanuzunpinar">@kaanuzunpinar</a></p>
 			
 			
-		</div>
+		</section>
 	</main>
 </body>
 </html>
